Fixed floating mdx images not going full width on mobile

--- a/components/MDXImage.module.css
+++ b/components/MDXImage.module.css
@@ -29,6 +29,6 @@
 @media (max-width: 900px) {
   .container.right {
     width: 100%;
-    max-width: 100%;
+    max-width: 100% !important;
   }
 }
